--- a/IrisFlowerClassifier.ipynb
+++ b/IrisFlowerClassifier.ipynb
@@ -59,7 +59,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"/content/drive/MyDrive/datasets/Iris.csv\")\n",
+        "df = pd.read_csv(\"Iris.csv\")\n",
         "df.head()"
       ],
       "metadata": {
